--- a/wiki/wiki_assets/wiki-home.css
+++ b/wiki/wiki_assets/wiki-home.css
@@ -185,80 +185,7 @@ p {
     padding-top: .25in;
     padding-bottom: .25in;
 }
-
-.diagram-item {
-    letter-spacing: 0px;
-    background-color: grey;
-    display: inline-block;
-    image-rendering: crisp-edges;
-    background-size: cover;
-    content: "";
-    color: rgba(22, 22, 22, 0);
-    background-image: var(--skin-file);
-    background-size: 800px;
-    background-color: rgba(0, 0, 0, 0.0);
-    transition-duration: 250ms;
-    cursor: pointer;
-    box-shadow: 0 0 0 inset rgba(0, 0, 0, 0.5);
-}
-
-.diagram-item:hover {
-    background-color: rgba(0, 0, 0, 0.25);
-    background-blend-mode: multiply;
-    color: rgba(242, 242, 242, 1.0);
-
-    box-shadow: 1px 3px 5px inset rgba(0, 0, 0, 0.5);
-}
-
-.diagram-item span {
-    pointer-events: none;
-    position: relative;
-    transform: translateY(30px) scale(75%);
-    font-family: "Noto Sans JP", sans-serif;
-
-    transition-duration: 250ms;
-}
-
-.diagram-item:hover span {
-    transform: translateY(0px) scale(100%);
-}
-
-#sacrHead {
-    width: 100px;
-    height: 100px;
-    background-position: -100px -100px;
-}
-
-#sacrTorso {
-    width: 100px;
-    height: 150px;
-
-    background-position: -249.5px -250px;
-}
-
-#sacrArmL {
-    width: var(--diagram-arm-width);
-    height: 150px;
-    background-position: -450px -650px;
-}
-
-#sacrArmR {
-    width: var(--diagram-arm-width);
-    height: 150px;
-    background-position: -550px -250px;
-}
-
-#sacrLegL {
-    width: 50px;
-    height: 150px;
-    background-position: -250px -650px;
-}
-
-#sacrLegR {
-    width: 50px;
-    height: 150px;
-    background-position: -50px -250px;
-}
+/* SACR Diagram Items */
 
 .button {
     width: 165px;
