--- a/assets/styles/main-style.css
+++ b/assets/styles/main-style.css
@@ -9,7 +9,6 @@ body {
   height: 100%;
   color: #f5f5f5;
 }
-
 body {
   background-color: #dfdfdf;
 }
@@ -96,7 +95,6 @@ body {
   box-shadow: 0em -2.5em inset rgba(255, 255, 255);
   color: black;
 }
-
 .footer {
   background-color: #dedae8;
   color: #d0ccd9;
@@ -122,8 +120,20 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
   margin-top: 0.3em;
+  color: black;
 }
-
+.clusterfuck div div span {
+  color: black;
+  cursor: pointer;
+  transition-duration: 250ms;
+}
+.clusterfuck div div span:hover {
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  margin-top: 0.3em;
+  color: #e08bbb;
+  box-shadow: 0px -1.5px inset #e08bbb;
+}
 .trademarks {
   color: black;
   font-family: "Source Code Pro", monospace;
@@ -156,7 +166,6 @@ body {
   color: black;
   font-family: "Open Sans";
 }
-
 /* Rig.html */
 .rig-downloads {
   background-color:rgb(85, 18, 59);
@@ -245,4 +254,3 @@ body {
   background-color: black;
   color: white;
 }
-
