--- a/assets/styles/main-style.css
+++ b/assets/styles/main-style.css
@@ -179,8 +179,8 @@ body {
   padding: 20px;
   background-color:rgba(243, 197, 220, 0.274);
   background-size: cover;
-  background-position: center center;
-  background-image: url('../images/Utami_V2.2_PhotoshopCC.png');
+  background-position: center 60%;
+  background-image: url('../images/AmiasRender.jpg');
   background-blend-mode: multiply;
 }
 .rig-downloads h2 {
