--- a/lost-angel/lost-angel.css
+++ b/lost-angel/lost-angel.css
@@ -1,9 +1,31 @@
-.lost-angel-frontpage {
-    background-image: url("../assets/images/LostAngelAnnouncement.png");
-    background-size: cover;
-    background-position: center center;
-    color: white;
-    text-align: center;
-    padding-top: 1in;
-    padding-bottom: 1in; }
-  
+@charset "utf-8";
+/* Import fonts */
+@import url("../assets/fonts/fonts.css");
+
+:root {
+  /* Fonts */
+  --primary-font: "Source Sans Pro";
+  --secondary-font: "Noto Sans";
+  --minecraft-font: "Minecraft";
+  /* Transition Durations */
+  --tgl-transition: 100ms;
+  --login-field-transition: 240ms;
+  --nav-transition: 200ms;
+  /* Other fields */
+  --radius-md: 10px;
+  --radius-sm: 5px;
+  --backdrop-filters: blur(10px) brightness(90%); /* Blurs and Darkens backdrop - DOES NOT WORK IN FIREFOX BASED BROWSERS BY DEFAULT */
+  --box-shadow: 0px 3px 5px -1px #00000033, 0px 5px 8px 0px #00000024, 0px 1px 14px 0px #0000001f;
+}
+
+/* Global Styles */
+html,
+body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  color: #f5f5f5;
+}
+body {
+  background-color: #dfdfdf;
+}
