--- a/assets/styles/main-style.scss
+++ b/assets/styles/main-style.scss
@@ -827,6 +827,98 @@ body {
   }
 }
 
+/* Contacts Page */
+.contact {
+  margin: 0;
+  margin-right: var(--margin-base);
+  margin-left: var(--margin-base);
+  background-color: #f5f5f5;
+  box-shadow: var(--box-shadow);
+  padding-top: 1px;
+  padding-bottom: 1px;
+
+  .email-stuff {
+    text-align: center;
+    border-bottom: 3px dashed rgb(114, 114, 114);
+    padding-right: 10%;
+    padding-left: 10%;
+    line-height: 30px;
+
+    h2 {
+      background-color: rgba(0, 0, 0, 0.884);
+      border-radius: 15px;
+      color: #f5f5f5;
+      width: auto;
+      display: inline-block;
+      font-family: "PT_Sans";
+      padding-left: 30px;
+      padding-right: 30px;
+
+      box-shadow: var(--box-shadow);
+    }
+
+    p {
+      color: black;
+      font-family: "Noto Sans";
+
+      a {
+        background-color: rgba(25, 25, 25, .25);
+        font-family: "Source Code Pro";
+        color: black;
+        cursor: pointer;
+        transition-duration: 235ms;
+        padding: 3px;
+        border-radius: 5px;
+
+        &:hover {
+          color: #ffd6ed;
+          box-shadow: 0px -1.5px inset #ffd6ed;
+        }
+      }
+    }
+  }
+
+  .discord-stuff {
+    text-align: center;
+    padding-right: 10%;
+    padding-left: 10%;
+    line-height: 30px;
+
+    h2 {
+      background-color: rgba(0, 0, 0, 0.884);
+      border-radius: 15px;
+      color: #f5f5f5;
+      width: auto;
+      display: inline-block;
+      font-family: "PT_Sans";
+      padding-left: 30px;
+      padding-right: 30px;
+
+      box-shadow: var(--box-shadow);
+    }
+
+    p {
+      color: black;
+      font-family: "Noto Sans";
+
+      a {
+        background-color: rgba(25, 25, 25, .25);
+        font-family: "Source Code Pro";
+        color: black;
+        cursor: pointer;
+        transition-duration: 235ms;
+        padding: 3px;
+        border-radius: 5px;
+
+        &:hover {
+          color: #ffd6ed;
+          box-shadow: 0px -1.5px inset #ffd6ed;
+        }
+      }
+    }
+  }
+}
+
 /* Responsive Shit */
 
 
