--- a/assets/styles/main-style.scss
+++ b/assets/styles/main-style.scss
@@ -15,7 +15,8 @@
   /* Other fields */
   --radius-md: 10px;
   --radius-sm: 5px;
-  --box-shadow: 0px 3px 5px -1px #00000033, 0px 5px 8px 0px #00000024, 0px 1px 14px 0px #0000001f;
+  --box-shadow: 0px 3px 5px -1px #00000033, 0px 5px 8px 0px #00000024,
+    0px 1px 14px 0px #0000001f;
   --margin-base: 1in;
 
   /* Works Gallery Button Shit*/
@@ -45,6 +46,7 @@
 
 * {
   transition-duration: 100ms;
+  cursor: default;
 }
 
 /* Global Styles */
@@ -62,7 +64,6 @@ body {
 }
 
 .lost-angel-frontpage {
-
   background-size: cover;
   background-position: center center;
   color: white;
@@ -137,7 +138,8 @@ body {
   max-width: 720px;
   padding: 10px;
   border-radius: 10px;
-  box-shadow: 0px 3px 5px -1px #00000075, 0px 5px 8px 0px #00000079, 0px 1px 14px 0px #00000036;
+  box-shadow: 0px 3px 5px -1px #00000075, 0px 5px 8px 0px #00000079,
+    0px 1px 14px 0px #00000036;
   backdrop-filter: blur(3px);
   margin-bottom: 5%;
 }
@@ -159,9 +161,12 @@ body {
   padding: 10px;
   box-shadow: var(--box-shadow);
   border-radius: 10px;
-  background-image: linear-gradient(to top right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.3));
+  background-image: linear-gradient(
+    to top right,
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0.3)
+  );
 }
-
 
 .nav-content {
   text-align: center;
@@ -187,7 +192,11 @@ body {
   margin-left: 2%;
   box-shadow: var(--box-shadow);
   backdrop-filter: blur(3px);
-  background-image: linear-gradient(to top right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.3));
+  background-image: linear-gradient(
+    to top right,
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0.3)
+  );
 }
 
 .nav-item:hover {
@@ -195,7 +204,11 @@ body {
   backdrop-filter: blur(10px);
   color: black;
   transform: scale(115%);
-  background-image: linear-gradient(to top right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.3));
+  background-image: linear-gradient(
+    to top right,
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0.3)
+  );
 }
 
 @media screen and (max-width: 600px) {
@@ -205,7 +218,6 @@ body {
 }
 
 /* Header End */
-
 
 /* Footer begin */
 .footer {
@@ -358,7 +370,6 @@ body {
   font-family: "PT_Sans";
 
   box-shadow: var(--box-shadow);
-
 }
 
 .works .works-blur .container p {
@@ -396,8 +407,6 @@ body {
   cursor: pointer;
   width: 50%;
   border-radius: 10px;
-
-
 }
 
 .works .works-blur .container .button-container div h2 {
@@ -424,7 +433,6 @@ body {
 .works .works-blur .container .button-container .youtube {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
-
 }
 
 .works .works-blur .container .button-container div:hover {
@@ -435,7 +443,6 @@ body {
 
 .works .works-blur .container .button-container .deviantart:hover {
   background-color: #06f28650;
-
 }
 
 .works .works-blur .container .button-container .deviantart:hover h2 {
@@ -449,7 +456,6 @@ body {
 .works .works-blur .container .button-container .youtube:hover h2 {
   color: rgba(245, 245, 245, 1);
 }
-
 
 .works .works-blur .container .latest-posts {
   display: flex;
@@ -489,8 +495,6 @@ body {
   box-shadow: var(--box-shadow);
 }
 
-
-
 .works .works-blur .container .latest-youtube-post a:hover {
   color: black;
   box-shadow: var(--box-shadow);
@@ -507,7 +511,6 @@ body {
 
   border-bottom-left-radius: 0px;
   border-top-left-radius: 0px;
-
 }
 
 .works .works-blur .container .latest-youtube-post a:hover i {
@@ -575,252 +578,153 @@ body {
   background-attachment: fixed;
   display: inline-block;
   border-top: 5px solid white;
-  border-image: 5px linear-gradient(to top right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, .7));
+  border-image: 5px
+    linear-gradient(
+      to top right,
+      rgba(255, 255, 255, 0.1),
+      rgba(255, 255, 255, 0.7)
+    );
   width: 100%;
-}
 
-.featured-rig .content-contain {
-  background-color: rgba(255, 228, 233, 0.39);
-  margin-left: 10%;
-  margin-right: 10%;
-  padding: 10px;
-  text-align: center;
-  background-image: linear-gradient(to bottom right, rgba(255, 228, 233, 0.075), rgba(255, 228, 233, 0.568));
-}
-
-.featured-rig .content-contain .title {
-  border-radius: 20px;
-  margin: 5px;
-  text-align: left;
-  padding: 10px;
-  padding-top: 1px;
-  margin-top: 20px;
-  background-image: linear-gradient(to top right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, .7));
-  backdrop-filter: blur(5px);
-  box-shadow: var(--box-shadow);
-  text-align: center;
-  max-width: 865px;
-  display: inline-block;
-}
-
-.featured-rig .content-contain .title h1 {
-  font-family: "Noto Sans";
-}
-
-.featured-rig .content-contain .title p {
-  font-family: "Source Sans Pro";
-}
-
-.featured-rig .content-contain .features {
-  display: flex;
-  justify-content: center;
-}
-
-.featured-rig .content-contain .features .col {
-  flex-basis: 50%;
-  border-radius: 20px;
-  height: 425px;
-  margin: 5px;
-  text-align: left;
-  max-width: fit-content;
-  padding: 10px;
-  background-image: linear-gradient(to top right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, .7));
-  backdrop-filter: blur(5px);
-  box-shadow: var(--box-shadow);
-}
-
-.featured-rig .content-contain .features .col h2 {
-  text-align: center;
-  font-family: "Open Sans";
-}
-
-.featured-rig .content-contain .features .col li {
-  font-family: "Source Sans Pro";
-  max-width: 400px;
-  line-height: 24px;
-}
-
-.featured-rig .content-contain .features .col p {
-  font-family: "Source Code Pro";
-  text-align: center;
-  max-width: 400px;
-  font-size: 14px;
-}
-
-.featured-rig .content-contain .download-featured-rig {
-  border-radius: 20px;
-  max-width: 865px;
-  margin: 5px;
-  text-align: left;
-  padding: 10px;
-  background-image: linear-gradient(to top right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, .7));
-  backdrop-filter: blur(5px);
-  box-shadow: var(--box-shadow);
-  display: inline-block;
-}
-
-.featured-rig .content-contain .download-featured-rig {
-  font-family: "Source Sans Pro";
-  text-align: center;
-}
-
-.featured-rig .content-contain .download-featured-rig h2 {
-  text-align: center;
-}
-
-.featured-rig .content-contain .download-featured-rig .featured-rig-buttons {
-  cursor: pointer;
-  display: inline-flex;
-  margin-bottom: 3%;
-}
-
-.download-featured-rig .featured-rig-buttons .download {
-  background-color: rgb(63, 63, 63);
-  height: 30px;
-  width: 175px;
-  padding: 5px;
-  padding-left: 5px;
-  overflow: hidden;
-  transition-duration: 250ms;
-  white-space: nowrap;
-  border-top-left-radius: 19px;
-  border-bottom-left-radius: 19px;
-  background-image: linear-gradient(to top right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, .3));
-  color: white;
-}
-
-.download-featured-rig .featured-rig-buttons .download::after {
-  content: "Ico";
-  color: transparent;
-  background-image: url("../images/Vectors/download_black_24dp.svg");
-  background-size: 30px;
-  background-position: center -1px;
-  background-repeat: no-repeat;
-  height: 35px;
-  width: 20px;
-  padding: 5px;
-  position: relative;
-  display: inline-block;
-  margin-left: 0;
-}
-
-.download-featured-rig .featured-rig-buttons .download:hover {
-  background-color: rgb(96, 236, 91);
-  color: black;
-}
-
-
-.download-featured-rig .featured-rig-buttons .changelog {
-  background-color: rgba(255, 255, 255, 0.226);
-  height: 30px;
-  width: 120px;
-  padding: 5px;
-  overflow: hidden;
-  transition-duration: 250ms;
-  white-space: nowrap;
-  border-top-right-radius: 19px;
-  border-bottom-right-radius: 19px;
-  background-image: linear-gradient(to top left, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, .7));
-}
-
-.download-featured-rig .featured-rig-buttons .changelog::before {
-  content: "Ico";
-  color: transparent;
-  background-image: url("../images/Vectors/text_snippet_black_24dp.svg");
-  background-size: 30px;
-  background-position: center -1px;
-  background-repeat: no-repeat;
-  height: 35px;
-  width: 20px;
-  padding: 5px;
-  position: relative;
-  margin-right: 3px;
-  display: inline-block;
-}
-
-.download-featured-rig .featured-rig-buttons .changelog:hover {
-  background-color: rgb(97, 97, 97);
-}
-
-.download-featured-rig img {
-  width: 78%;
-  height: fit-content;
-  border-radius: 10px;
-  box-shadow: var(--box-shadow);
-  margin-bottom: 3%;
-}
-
-
-.rig-gallery {
-  color: black;
-
-  .title {
-    margin-left: var(--margin-base);
-    margin-right: var(--margin-base);
+  .content-contain {
+    background-color: rgba(255, 228, 233, 0.39);
+    margin-left: 10%;
+    margin-right: 10%;
+    padding: 10px;
     text-align: center;
+    background-image: linear-gradient(
+      to bottom right,
+      rgba(255, 228, 233, 0.075),
+      rgba(255, 228, 233, 0.568)
+    );
 
-    h1 {
-      font-family: var(--primary-font);
-    }
-
-    p {
-      font-family: var(--secondary-font);
-
-      a {
-
-        &:hover {
-          color: #ee52aa;
-          box-shadow: 0px -1.5px inset #ee52aa;
-        }
-      }
-    }
-
-    h2 {
-      background-color: #f1f1f1;
-      color: black;
-      width: fit-content;
-      font-family: "PT_Sans";
-      display: inline-block;
-      padding-left: 50px;
-      padding-right: 50px;
+    .title {
+      border-radius: 20px;
+      margin: 5px;
+      text-align: left;
       padding: 10px;
+      padding-top: 1px;
+      margin-top: 20px;
+      background-image: linear-gradient(
+        to top right,
+        rgba(255, 255, 255, 0.1),
+        rgba(255, 255, 255, 0.7)
+      );
+      backdrop-filter: blur(5px);
       box-shadow: var(--box-shadow);
-      border-radius: 10px;
-      background-image: linear-gradient(to top right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.3));
-    }
-  }
-
-  .gallery {
-    margin-left: var(--margin-base);
-    margin-right: var(--margin-base);
-
-    .rig-card {
-      background-image: linear-gradient(to top right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.3));
-      box-shadow: var(--box-shadow);
-      width: fit-content;
-      border-radius: 10px;
       text-align: center;
+      max-width: 865px;
       display: inline-block;
 
-      .rig-card-thumb {
-        img {
-          width: 100%;
-          height: 150px;
-          border-radius: 10px;
-          box-shadow: var(--box-shadow);
-          margin-bottom: 3%;
-        }
-
-        display: inline-block;
+      h1 {
+        font-family: "Noto Sans";
       }
 
-      .rig-card-text {
-        display: inline-block;
+      p {
+        font-family: "Source Sans Pro";
+      }
+    }
 
+    .download-rigs {
+      display: flex;
+      justify-content: center;
+
+      .col {
+        flex-basis: 50%;
+        border-radius: 20px;
+        height: 425px;
+        margin: 5px;
+        text-align: left;
+        max-width: fit-content;
+        padding: 10px;
+        background-image: linear-gradient(
+          to top right,
+          rgba(255, 255, 255, 0.1),
+          rgba(255, 255, 255, 0.7)
+        );
+        backdrop-filter: blur(5px);
+        box-shadow: var(--box-shadow);
+
+        h2 {
+          text-align: center;
+          font-family: "Open Sans";
+          margin-bottom: 0;
+          padding-bottom: 0;
+        }
         h3 {
-          font-family: var(--primary-font);
-          margin: 0;
-          margin-bottom: 5px;
+          text-align: center;
+          font-family: "Open Sans";
+          margin-top: 0;
+          color: rgb(49, 49, 49);
+        }
+
+        p {
+          font-family: "Source Code Pro";
+          text-align: center;
+          max-width: 400px;
+          font-size: 14px;
+          height: 200px;
+        }
+        .download-rig {
+          text-align: center;
+          .download-btn {
+            padding: 10px;
+            justify-content: center;
+            font-family: "Noto Sans";
+            color: black;
+            background-color: #ffffff25;
+            transition-duration: 230ms;
+            cursor: pointer;
+            width: 150px;
+            height: 20px;
+            border-radius: 20px;
+            margin-right: 2%;
+            margin-left: 2%;
+            box-shadow: var(--box-shadow);
+            backdrop-filter: blur(3px);
+            
+            background-color: rgba(199, 223, 255, 0.8);
+            background-image: linear-gradient(
+              to top right,
+              rgba(255, 255, 255, 0.1),
+              rgba(255, 255, 255, 0.3)
+            );
+            display: inline-block;
+
+            &:hover {
+              background-color: rgba(116, 191, 241, 0.8);
+              backdrop-filter: blur(10px);
+              color: black;
+              transform: scale(115%);
+              background-image: linear-gradient(
+                to top right,
+                rgba(255, 255, 255, 0.1),
+                rgba(255, 255, 255, 0.3)
+              );
+            }
+          }
+          .download-btn-na {
+            padding: 10px;
+            justify-content: center;
+            font-family: "Noto Sans";
+            color: black;
+            background-color: #ffffff25;
+            transition-duration: 230ms;
+            cursor: default;
+            width: 150px;
+            height: 20px;
+            border-radius: 20px;
+            margin-right: 2%;
+            margin-left: 2%;
+            box-shadow: var(--box-shadow);
+            backdrop-filter: blur(3px);
+            background-image: linear-gradient(
+              to top right,
+              rgba(255, 255, 255, 0.1),
+              rgba(255, 255, 255, 0.3)
+            );
+            display: inline-block;
+          }
         }
       }
     }
@@ -862,7 +766,7 @@ body {
       font-family: "Noto Sans";
 
       a {
-        background-color: rgba(25, 25, 25, .25);
+        background-color: rgba(25, 25, 25, 0.25);
         font-family: "Source Code Pro";
         color: black;
         cursor: pointer;
@@ -902,7 +806,7 @@ body {
       font-family: "Noto Sans";
 
       a {
-        background-color: rgba(25, 25, 25, .25);
+        background-color: rgba(25, 25, 25, 0.25);
         font-family: "Source Code Pro";
         color: black;
         cursor: pointer;
@@ -921,7 +825,6 @@ body {
 
 /* Responsive Shit */
 
-
 @media screen and (max-width: 1020px) {
   .about-content .p2 {
     display: initial;
@@ -933,7 +836,6 @@ body {
   }
 
   .featured-rig .content-contain .features .col li {
-
     line-height: 20px;
   }
 
@@ -951,7 +853,6 @@ body {
     margin-left: 5%;
     margin-right: 5%;
   }
-
 }
 
 @media screen and (max-width: 940px) {
@@ -1046,7 +947,6 @@ body {
     border-radius: 15px;
     box-shadow: var(--box-shadow);
   }
-
 }
 
 @media screen and (max-width: 660px) {
@@ -1057,8 +957,6 @@ body {
   .featured-rig .content-contain .features .col {
     max-width: 100%;
   }
-
-
 }
 
 @media screen and (max-width: 540px) {
